# chess-game

./: .gitignore  README.md  pyproject.toml  setup.sh
ChessChat/: Makefile
ChessChat/ChessChat/: ChessChatApp.swift
ChessChat/ChessChat.xcodeproj/: project.pbxproj
ChessChat/ChessChat/Models/: Player.swift
ChessChat/ChessChat/Views/: Board.swift  ContentView.swift
ChessChat/ChessChatTests/: ChessChatTests.swift
ChessChat/ChessChatUITests/: ChessChatUITests.swift  ChessChatUITestsLaunchTests.swift
LeapChatApp/LeapChatApp/: ChatStore.swift  ContentView.swift  LeapChatAppApp.swift
LeapChatApp/LeapChatApp.xcodeproj/: project.pbxproj
LeapChatApp/LeapChatApp.xcodeproj/project.xcworkspace/xcuserdata/paulabartabajo.xcuserdatad/: UserInterfaceState.xcuserstate
LeapChatApp/LeapChatApp.xcodeproj/xcuserdata/paulabartabajo.xcuserdatad/xcschemes/: xcschememanagement.plist
LeapChatApp/LeapChatAppTests/: LeapChatAppTests.swift
LeapChatApp/LeapChatAppUITests/: LeapChatAppUITests.swift  LeapChatAppUITestsLaunchTests.swift
fine-tune/: Makefile  README.md  pyproject.toml
fine-tune/data/raw/: .gitignore
fine-tune/scripts/: check.py  generate_instruction_dataset.py  generate_merged_model.py  push_model_to_hf.py
fine-tune/src/fine_tune/: checkpoints.py  config.py  data.py  evaluate.py  game.py  infra.py  main.py  model.py  players.py  prompt_template.py  trainer.py
notebooks/: 💧_LFM2_SFT_with_Unsloth.ipynb
src/chess_game/: __init__.py
