[project]
name = "chess-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paulescu", email = "plabartabajo@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "unsloth",
    "causal-conv1d==1.5.0.post8",
    "torch==2.4.1",
    "transformers==4.55.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
