[project]
name = "fine-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paulescu", email = "plabartabajo@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "datasets>=4.0.0",
    "fire>=0.7.1",
    "huggingface-hub>=0.34.4",
    "leap-bundle>=0.3.0",
    "modal>=1.1.3",
    "peft>=0.17.1",
    "pydantic-settings>=2.10.1",
    "python-chess>=1.999",
    "wandb>=0.21.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
]
